<resources>
    <string name="app_name">TimeManager</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="confirm">CONFIRM ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="token">Company token...</string>
    <string name="register">REGISTER</string>
    <string name="fieldsRequired">All fields are required</string>
    <string name="logout">LOGOUT</string>
    <string name="proiect">Projects</string>
    <string name="nume">Nume Proiect:</string>
    <string name="data">Data:</string>
    <string name="ore">Ore lucrate:</string>
    <string name="descriere">Descriere...</string>
    <string name="Edit">EDIT PROFILE</string>
    <string name="numeUser">Nume:</string>
    <string name="NumeUserHint">Numele tau</string>
    <string name="prenumeUser">Prenume:</string>
    <string name="PrenumeUserHint">Prenumele tau</string>
    <string name="Adresa">Adresa:</string>
    <string name="AdresaHint">Adresa ta</string>
    <string name="telefon">Telefon:</string>
    <string name="telefonHint">Telefonul tau</string>
    <string name="Salveaza">Salveaza</string>
</resources>
